sass/landing.scss
/* landing page */

body.page-landing{
    background:$color_3;
}

.landing{
    max-width:100%;
    word-wrap: break-word;
}

.landing h1{
    line-height:80px;
    color:#fff;
    font-size:30px;
    font-family: 'Fira Sans';
    font-weight:300;
}

.landing p{
    line-height:150%;
    color:#fff;
    font-size:24px;
    font-family:sans-serif;
    font-family: 'Fira Sans';
    font-weight:300;
}

.landing a{
    color: $color_2;
}

.features{
    background:#eee;
    color:#333;
    margin-left:-20px;
    margin-right:-25px;
    padding:20px;
    border-bottom:5px solid $body_bg;
}

.features h3{
    text-shadow:none;
}

@media (min-width:1000px){
    .features .block-center{
        width:40%;
        margin:auto;
    }
}

.examples{
    background:lighten($color_3,6%);
    padding:20px;
    margin:20px;

    h1{
        margin-top:0;
    }
    
    p{
        margin:0 20px;
    }
    
    .example{
        margin:0 20px;
        padding:20px;
        padding-bottom:0;
        background:#fff;
        
        p{
            color:#000;
            font-size:16px;
            margin:10px 0;
        }
        
        h3{
            color:$color_2;
        }
    }
}

@media all and (max-width:768px){
    .examples{
        padding-left:0;
        padding-right:0;
        margin-left:0;
        margin-right:0;
    }
}

